bpo-34794: Fix a memory leak in Tkinter.Image. A Tcl object was leaked when set the data or maskdata options.